dataset1235/2025-2/1153765216/users/1581346053/executions/3138746197_854576230.log
== SUBMISSION (2025-08-19 17:02:29)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:45:40)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(.upper(frase))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(.upper(frase))
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(.upper(frase))
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 17:02:47)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:44:31)
-- CODE: 
frase = "Ada Lovelace foi a primeira programadora da historia"
print(.upper())

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(.upper())
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- ERROR:
File "XXXX", line 2
    print(.upper())
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
